; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/host/extr_ohci-pnx4008.c_pnx4008_unset_usb_bits.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/host/extr_ohci-pnx4008.c_pnx4008_unset_usb_bits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SE_USB_OTG_ATX_INT_N = common dso_local global i32 0, align 4
@SE_USB_OTG_TIMER_INT = common dso_local global i32 0, align 4
@SE_USB_I2C_INT = common dso_local global i32 0, align 4
@SE_USB_INT = common dso_local global i32 0, align 4
@SE_USB_NEED_CLK_INT = common dso_local global i32 0, align 4
@SE_USB_AHB_NEED_CLK_INT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @pnx4008_unset_usb_bits to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pnx4008_unset_usb_bits() #0 {
  %1 = load i32, i32* @SE_USB_OTG_ATX_INT_N, align 4
  %2 = call i32 @start_int_mask(i32 %1)
  %3 = load i32, i32* @SE_USB_OTG_TIMER_INT, align 4
  %4 = call i32 @start_int_mask(i32 %3)
  %5 = load i32, i32* @SE_USB_I2C_INT, align 4
  %6 = call i32 @start_int_mask(i32 %5)
  %7 = load i32, i32* @SE_USB_INT, align 4
  %8 = call i32 @start_int_mask(i32 %7)
  %9 = load i32, i32* @SE_USB_NEED_CLK_INT, align 4
  %10 = call i32 @start_int_mask(i32 %9)
  %11 = load i32, i32* @SE_USB_AHB_NEED_CLK_INT, align 4
  %12 = call i32 @start_int_mask(i32 %11)
  ret void
}

declare dso_local i32 @start_int_mask(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
